# fdk-aac-playground

./: CMakeLists.txt  README.md  local-build.cmd  test.cmd
.github/workflows/: build.yml
src/: aac_encoder.cpp  aac_encoder.h  main.cpp
